<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="app_name">BaroLog</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="show_results">Show Results</string>

    <string name="units">measureUnits</string>
    <string name="pressureMeasureInterval">pressureMeasureInterval</string>

    <string name="pressureMeasureSettingsTitle">Pressure measure units</string>
    <string name="pressureMeasureSettingsSummary">Defines measure units for barometer</string>
    <string name="pressureMeasureSettingsDialogTitle">Choose units</string>

    <string name="pressureMeasureIntervalSettingsTitle">Interval for pressure measurement</string>
    <string name="pressureMeasureIntervalSettingsSummary">Defines timing interval for logger</string>
    <string name="pressureMeasureIntervalSettingsDialogTitle">Choose interval</string>
</resources>
